--- a/Todo_list/index.html
+++ b/Todo_list/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="todo.css">
-  <title>Todo App</title>
+  <title>Todo App </title>
 </head>
 <body>
   <h1 id="main-heading">Todo App</h1>
